2004-02-16  Jim Evins  <evins@snaught.com>

	* src/xml-label-04.c: (xml04_parse_image_props):
	* src/xml-label-191.c: (xml191_parse_image_props):
	* src/xml-label.c: (xml_parse_object_image):
		Delay setting image size until after image has been applied to new
		object.
	
2004-02-15  Jim Evins  <evins@snaught.com>

	* src/label-barcode.c: (gl_label_barcode_set_data),
	(gl_label_barcode_set_props):
		Don't emit "changed" signal, if no change actually made for these
		methods.  Reduces number of unnecessary redraws of barcodes.
	
	* src/label-object.h:
	* src/label-object.c: (gl_label_object_set_position),
	(gl_label_object_set_position_relative), (set_size),
	(gl_label_object_set_size),
	(gl_label_object_set_size_honor_aspect):
		Don't emit "changed" signal, if no change actually made for these
		methods.

2004-02-15  Jim Evins  <evins@snaught.com>

	* data/glabels-2.0.dtd:
		Added specific subtypes for various barcode types.
	
	* src/bc.h:
	* src/bc.c: (id_to_index), (name_to_index), (gl_barcode_new),
	(gl_barcode_get_styles_list), (gl_barcode_default_digits),
	(gl_barcode_can_text), (gl_barcode_text_optional),
	(gl_barcode_can_csum), (gl_barcode_csum_optional),
	(gl_barcode_id_to_name), (gl_barcode_name_to_id):
		Changed API to use a string id, rather than a fixed enumeration.  Id and
		name are separate strings.  Added entries to backend table for specific
		subtypes for various barcode types.
	
	* src/bc-postnet.h:
	* src/bc-postnet.c: (gl_barcode_postnet_new), (postnet_code),
	(is_length_valid):
		Modified to conform to above API.  Now more stringent with data length
		for various subtypes.
	
	* src/bc-gnubarcode.h:
	* src/bc-gnubarcode.c: (gl_barcode_gnubarcode_new),
	(is_length_valid), (is_length1_valid), (is_length2_valid):
		Modified to conform to above API.  Now more stringent with data length
		for various subtypes.

	* src/label-barcode.h:
	* src/label-barcode.c: (copy), (gl_label_barcode_set_props),
	(gl_label_barcode_get_props), (get_size):