@@ -19,7 +19,8 @@ INCLUDES = \
 	-DLIBDIR=\""$(libdir)"\"                        	\
 	-DGLABELS_LOCALEDIR=\""$(datadir)/locale"\" 		\
 	-DGLABELS_UI_DIR=\""$(datadir)/glabels/ui/"\" 		\
-	-DGLABELS_GLADE_DIR=\""$(datadir)/glabels/glade/"\"
+	-DGLABELS_GLADE_DIR=\""$(datadir)/glabels/glade/"\"	\
+	$(HAVE_FILE_CHOOSER)
 
 glabels_LDFLAGS = -export-dynamic
 
